[package]
name = "rust_chess"
version = "0.1.0"
authors = ["Vladimir Maksimovski <vlade.maksimovski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.19.0"
rand = "0.8.0"
fxhash = "0.2.1"
fern = "0.6.1"
chrono = "0.4.23"
log = "0.4.17"